[gd_scene load_steps=5 format=3 uid="uid://dvcgqgsus78g0"]

[ext_resource type="Theme" uid="uid://b7ep3akobiegr" path="res://tres/main_theme.tres" id="1_3jinw"]
[ext_resource type="Script" path="res://script/ui/battle_over_panel.gd" id="2_8ns6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmibc"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.705882)

[sub_resource type="LabelSettings" id="LabelSettings_nn4of"]
font_size = 24

[node name="BattleOverPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3jinw")
theme_override_styles/panel = SubResource("StyleBoxFlat_lmibc")
script = ExtResource("2_8ns6x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Victorious"
label_settings = SubResource("LabelSettings_nn4of")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
